# Voice-Assistant17

./: .dockerignore  .env.production.template  .gitignore  AGENTIC_IMPLEMENTATION.md  AGENTIC_IMPROVEMENTS.md  AGENTIC_INTEGRATION_GUIDE.md  AGENTIC_QUICK_REFERENCE.md  AUTH_IMPLEMENTATION_STATUS.md  BROWSER_AUTOMATION_PERFORMANCE.md  CLAUDE.md  COMPLETION_REPORT.md  CONVERSATION_MEMORY_FIX_PLAN.md  CONVERSATION_MEMORY_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_COMMANDS.txt  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FILES_READY.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STEPS_QUICK_REFERENCE.md  DEPLOYMENT_UPDATE_GUIDE.md  DEPLOY_QUICK_START.md  DOCUMENTATION_INDEX.md  Dockerfile  FRONTEND_AUTH_SETUP.md  HUGGINGFACE_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TOOLS_SUMMARY.md  LLM_CACHING_IMPLEMENTATION.md  PHASE_1_2_COMPLETION_SUMMARY.md  PHASE_IMPLEMENTATION_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STATUS_REPORT.md  README.md  README_AGENT_TOOLS.md  README_IMPLEMENTATION.md  SETUP_AND_DEPLOYMENT_GUIDE.md  START_HERE_DEPLOYMENT.md  STREAMING_RESPONSES_IMPLEMENTATION.md  (+18 more)
.claude/: settings.local.json
.copilot/: config.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: .env.template  assistant_config.yaml
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
docs/: CUSTOM_WAKE_WORD_TRAINING.md  PHASE1-COMPLETE.md  PHASE2-COMPLETE.md  QUICKSTART.md  WEB_DEPLOYMENT.md  WEB_INTERFACE_AGENT_INTEGRATION.md  api-endpoints.md  architecture.md  audio_examples.md  benchmarks.md  browser-automation-setup.md  commands.md  deployment.md  google-apis-setup.md  mcp_integration_plan.md  persistent-memory.md  success_criteria_validation.md  troubleshooting.md  web-interface.md
scripts/: install_browser_automation.bat  install_browser_automation.sh  install_dependencies.sh  install_google_apis.bat  install_google_apis.sh  setup_wake_word.sh
specs/: 003-laptop-control-plan.md
specs/001-voice-assistant-baseline/: data-model.md  (+5 more)
web/: .gitignore  DEPLOYMENT.md  DEPLOY_NOW.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README_UPDATES.md  SUPABASE_SETUP.md  VOICE_COMMANDS.md  package-lock.json  package.json  tailwind.config.ts
(+155 files in other folders)
